Core app functionality

--- a/src/assets/stylus/_typography.styl
+++ b/src/assets/stylus/_typography.styl
@@ -12,3 +12,12 @@
 body {
     font-family: 'Avenir LT Std', Arial, sans-serif;
 }
+
+.t-input {
+    font-family: 'Avenir LT Std', Arial, sans-serif;
+    font-size: 15px;
+}
+
+.t-text {
+    font-size: 15px;
+}
