--- a/src/assets/stylus/_resets.styl
+++ b/src/assets/stylus/_resets.styl
@@ -35,6 +35,16 @@ button {
     cursor: pointer;
 }
 
+input,
+input:focus {
+    background-image:none;
+    background-color:transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    outline: none;
+}
+
 ::selection {
     background: #eaeaea;
 }
