--- a/src/assets/stylus/app.styl
+++ b/src/assets/stylus/app.styl
@@ -1,19 +1,83 @@
+$c-white = #FFF;
+$c-bg-grey = #B1B1B1;
+$c-border-grey = #505050;
+
 body {
     margin: 0px;
     padding: 0px;
-    background-color: #b1b1b1;
+    background-color: $c-bg-grey;
 }
 
 #app {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
     height: 100vh;
     top: 0;
     left: 0;
     padding: 30px 20px;
+}
+
+.container {
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    max-height: 500px;
+    background-color: $c-white;
+    overflow: hidden;
+}
+
+.slide-wrapper {
+    position: relative;
+    display: flex;
+    width: 300%;
+    height: 100%;
+}
+
+.slide {
+    position: relative;
+    display: inline-block;
+    width: 33.3333%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.button {
+    background-color: #000;
+    color: $c-white;
+}
+
+.login {
+    &__input {
+        border: solid 1px $c-border-grey;
+        padding: 10px;
+    }
+    
+    &__button {
+        opacity: 0.2;
+        // pointer-events: none;*/
+        transition: opacity .5s;
+        
+        &--active {
+            pointer-events: all;
+            opacity: 1;
+            cursor: pointer;
+        }
+    }
+    
+    &__input,
+    &__button {
+        width: 100%;
+        max-width: 200px;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
 }
 
 @require('_resets');
