Additional functionality & adjustments

--- a/src/assets/stylus/_typography.styl
+++ b/src/assets/stylus/_typography.styl
@@ -11,6 +11,7 @@
 
 body {
     font-family: 'Avenir LT Std', Arial, sans-serif;
+    font-size: 14px;
 }
 
 .t-input {
@@ -19,5 +20,22 @@ body {
 }
 
 .t-text {
-    font-size: 15px;
+    font-size: 14px;   
+}
+
+.t-id {
+    font-size: 8px;
+}
+
+.t-back {
+    font-size: 10px;
+}
+
+.t-error {
+    font-size: 12px;
+    color: $c-error;
+}
+
+.t-logout {
+    font-size: 12px;
 }
