Update ESLint def

--- a/src/assets/stylus/app.styl
+++ b/src/assets/stylus/app.styl
@@ -81,7 +81,7 @@ body {
     
     &__button {
         opacity: 0.2;
-        //pointer-events: none;
+        pointer-events: none;
         transition: opacity .5s;
         margin-bottom: 5px;
         cursor: default;
